--- a/src/app/lists/lists.component.html
+++ b/src/app/lists/lists.component.html
@@ -1,10 +1,21 @@
-<div class="col button-top text-center">
-    <button class="btn btn-primary" [routerLink]="['/list-create']">
-        Create a new list
-    </button>
+<body>
+
+<div id="button">
+    <div *ngIf="currentUser!==null" class="col button-top text-center">
+        <button class="btn btn-primary" [routerLink]="['/list-create']">
+            Create a new list
+        </button>
+    </div>
+
+    <div *ngIf="currentUser==null" class="col button-top text-center">
+        <button class="btn btn-primary" [routerLink]="['/login']">
+            Login to create a new list
+        </button>
+    </div>
 </div>
 
 <app-anime-list-display
     [lists]="lists"
     [isDefault]="'all_custom'"
 ></app-anime-list-display>
+</body>
