--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -50,20 +50,6 @@ body {
 #image1 {
     height: 460px;
 }
-#articles {
-    border-radius: 5px;
-    width: 75vw;
-    margin: auto;
-}
-#articleList {
-    margin-top: 2vh;
-}
-#article {
-    background-color: rgba(40, 43, 48, 0.95);
-    margin-bottom: 1vh;
-    box-shadow: 5px 8px 18px 3px rgba(0, 0, 0, 0.5);
-    border-radius: 5px;
-}
 
 #body p {
     padding: 0.5vw;
@@ -105,30 +91,29 @@ body {
     transform: scale(1.1);
 }
 
-.featurette-divider {
-    border-color: #868686;
-    width: 50vw;
-}
-.articleImage {
-    margin-top: 1vh;
-    width: 23vw;
-    height: 23vh;
-}
-.featurette:hover {
-    background-color: #11428d;
-    border-radius: 1vh;
-    cursor: pointer;
-}
-
 .img-fluid {
     min-width: 100%;
-}
-
-#articleTitle {
-    margin-left: 2vw;
 }
 
 #owner {
     color: #868686;
     font-style: italic;
+}
+
+.bg-shadow {
+    background: rgba(76, 76, 76, 0);
+    background: -webkit-gradient(
+        left top,
+        left bottom,
+        color-stop(0%, rgba(179, 171, 171, 0)),
+        color-stop(49%, rgba(48, 48, 48, 0.37)),
+        color-stop(100%, rgba(19, 19, 19, 0.8))
+    );
+    background: linear-gradient(
+        to bottom,
+        rgba(179, 171, 171, 0) 0%,
+        rgba(48, 48, 48, 0.71) 49%,
+        rgba(19, 19, 19, 0.8) 100%
+    );
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4c4c4c', endColorstr='#131313', GradientType=0 );
 }
