--- a/src/app/anime-list-display/anime-list-display.component.html
+++ b/src/app/anime-list-display/anime-list-display.component.html
@@ -70,7 +70,15 @@
                             écrite par {{ list.isOwnedBy.username }}
                         </p>
                     </div>
-                    <div id="right" class="deleteButton" *ngIf="connectedUser && isDefault === 'user_custom' && connectedUser.id === list.isOwnedBy.id">
+                    <div
+                        id="right"
+                        class="deleteButton"
+                        *ngIf="
+                            connectedUser &&
+                            isDefault === 'user_custom' &&
+                            connectedUser.id === list.isOwnedBy.id
+                        "
+                    >
                         <button
                             id="delete-button"
                             type="button"
