--- a/src/app/article-editor/article-editor.component.html
+++ b/src/app/article-editor/article-editor.component.html
@@ -31,7 +31,8 @@
                     [editor]="Editor"
                     data="<p>Hello, world!</p>"
                     (ready)="onReady($event)"
-                ></ckeditor>
+                >
+                </ckeditor>
             </div>
         </div>
 
