--- a/src/app/onelist/onelist.component.html
+++ b/src/app/onelist/onelist.component.html
@@ -19,82 +19,147 @@
             </thead>
 
             <tbody class="table-dark">
-                <tr *ngFor="let l of animesOfThisList; let i = index" class="tr">
+                <tr
+                    *ngFor="let l of animesOfThisList; let i = index"
+                    class="tr"
+                >
                     <td id="{{ i + 1 }}">{{ i + 1 }}</td>
                     <td>
-                        <img loading="lazy" style="max-height: 72px" src="{{ l.imgUrl }}" alt="" />
+                        <img
+                            loading="lazy"
+                            style="max-height: 72px"
+                            src="{{ l.imgUrl }}"
+                            alt=""
+                        />
                     </td>
                     <td>
                         <a [routerLink]="['/animes', l.id]">{{ l.title }}</a>
                     </td>
                     <td>X/{{ l.episodes }}</td>
                     <td>
-                        <button *ngIf="owned" (click)="onDelete(l.id)" id="removeAnime" class="btn btn-xs btn-danger">
+                        <button
+                            *ngIf="owned"
+                            (click)="onDelete(l.id)"
+                            id="removeAnime"
+                            class="btn btn-xs btn-danger"
+                        >
                             X
                         </button>
                     </td>
                 </tr>
                 <tr *ngIf="owned" id="test">
                     <td style="border-bottom-left-radius: 5px">
-                        <button class="btn btn-primary" *ngIf="!isDefault" (click)="open(content)">
-                            <span><i class="fa fa-plus-square"></i>add an
-                                anime</span>
+                        <button
+                            class="btn btn-primary"
+                            *ngIf="!isDefault"
+                            (click)="open(content)"
+                        >
+                            <span
+                                ><i class="fa fa-plus-square"></i>add an
+                                anime</span
+                            >
                         </button>
                     </td>
                     <td></td>
                     <td></td>
                     <td></td>
                     <td style="border-bottom-right-radius: 5px">
-                        <button class="btn btn-danger" *ngIf="!isDefault" (click)="deleteList()">
-                            <span><i class="fa fa-trash"></i> delete this
-                                list</span>
+                        <button
+                            class="btn btn-danger"
+                            *ngIf="!isDefault"
+                            (click)="deleteList()"
+                        >
+                            <span
+                                ><i class="fa fa-trash"></i> delete this
+                                list</span
+                            >
                         </button>
                     </td>
                 </tr>
             </tbody>
         </table>
     </div>
-    <div *ngIf="!isDefault" id="commentSection" class="row d-flex justify-content-center">
-        <div *ngIf="comments !== undefined" [ngClass]="
+    <div
+        *ngIf="!isDefault"
+        id="commentSection"
+        class="row d-flex justify-content-center"
+    >
+        <div
+            *ngIf="comments !== undefined"
+            [ngClass]="
                 isConnected
                     ? 'col-sm-6 col-md-6 col-6 pb-6'
                     : 'col-sm-8 col-md-8 col-8 pb-8'
-            ">
+            "
+        >
             <h1>Comments</h1>
-            <div *ngFor="let comment of comments; let index = index" class="mt-4 text-justify float-left comment">
-                <img loading="lazy" src="data:image/webp;base64,{{
+            <div
+                *ngFor="let comment of comments; let index = index"
+                class="mt-4 text-justify float-left comment"
+            >
+                <img
+                    loading="lazy"
+                    src="data:image/webp;base64,{{
                         comment.user.image.content
-                    }}" alt="profile image" class="rounded-circle" width="80" height="80" />
+                    }}"
+                    alt="profile image"
+                    class="rounded-circle"
+                    width="80"
+                    height="80"
+                />
                 <a id="authorr" [routerLink]="['/user', comment.user.id]">
                     <h4>{{ comment.user.username }}</h4>
                 </a>
                 <span>-{{ comment.date | date: "dd/MM/yyyy" }}</span> <br />
-                <button (click)="deleteListComment(comment.user.id)" *ngIf="adminStatus === 'ROLE_ADMIN'"
-                    class="btn btn-danger" type="button">
+                <button
+                    (click)="deleteListComment(comment.user.id)"
+                    *ngIf="adminStatus === 'ROLE_ADMIN'"
+                    class="btn btn-danger"
+                    type="button"
+                >
                     KILL
                 </button>
                 <p>{{ comment.body }}</p>
             </div>
         </div>
-        <div *ngIf="isConnected" class="
+        <div
+            *ngIf="isConnected"
+            class="
                 col-lg-4 col-md-5 col-sm-4
                 offset-md-1 offset-sm-1
                 col-12
                 mt-4
-            ">
-            <form id="align-form" (ngSubmit)="sendListComment()" [formGroup]="commentForm">
+            "
+        >
+            <form
+                id="align-form"
+                (ngSubmit)="sendListComment()"
+                [formGroup]="commentForm"
+            >
                 <div class="form-group">
                     <h1>Leave a comment</h1>
                     <label for="message">Message</label>
-                    <textarea name="msg" id="message" cols="30" rows="5" class="form-control" formControlName="comment"
-                        style="background-color: black"></textarea>
+                    <textarea
+                        name="msg"
+                        id="message"
+                        cols="30"
+                        rows="5"
+                        class="form-control"
+                        formControlName="comment"
+                        style="background-color: black"
+                    ></textarea>
                 </div>
                 <div class="form-group">
                     <button type="submit" class="btn btn-primary">
                         {{ userHasComment ? "Edit Comment" : "Post Comment" }}
                     </button>
-                    <button *ngIf="userHasComment" id="delete-button" type="button" class="btn btn-danger"
-                        (click)="deleteListComment(-667)">
+                    <button
+                        *ngIf="userHasComment"
+                        id="delete-button"
+                        type="button"
+                        class="btn btn-danger"
+                        (click)="deleteListComment(-667)"
+                    >
                         Delete your comment
                     </button>
                 </div>
@@ -105,18 +170,38 @@
 <ng-template #content let-modal>
     <div class="modal-header">
         <h4 class="modal-title" id="modal-basic-title">Add an anime</h4>
-        <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+        <button
+            type="button"
+            class="close"
+            aria-label="Close"
+            (click)="modal.dismiss('Cross click')"
+        >
             <span aria-hidden="true">&times;</span>
         </button>
     </div>
     <div class="modal-body">
-        <form class="container w-75 text-light" [formGroup]="addAnimeForm" (ngSubmit)="onSubmit()">
+        <form
+            class="container w-75 text-light"
+            [formGroup]="addAnimeForm"
+            (ngSubmit)="onSubmit()"
+        >
             <div class="form-group">
                 <div class="input-group">
-                    <input placeholder="Add an anime" id="addAnime" [(ngModel)]="selectedValue"
-                        [ngModelOptions]="{ standalone: true }" [typeahead]="allAnimes" typeaheadOptionField="title"
-                        [typeaheadScrollable]="true" (typeaheadOnSelect)="onSelect($event)" class="form-control" />
-                    <button id="sendNewList" class="btn btn-sm btn-primary float-right searchBtn">
+                    <input
+                        placeholder="Add an anime"
+                        id="addAnime"
+                        [(ngModel)]="selectedValue"
+                        [ngModelOptions]="{ standalone: true }"
+                        [typeahead]="allAnimes"
+                        typeaheadOptionField="title"
+                        [typeaheadScrollable]="true"
+                        (typeaheadOnSelect)="onSelect($event)"
+                        class="form-control"
+                    />
+                    <button
+                        id="sendNewList"
+                        class="btn btn-sm btn-primary float-right searchBtn"
+                    >
                         Add
                     </button>
                 </div>
