--- a/src/app/stats/stats.component.html
+++ b/src/app/stats/stats.component.html
@@ -5,16 +5,92 @@
         commentStats !== undefined
     "
 >
-    <div id="generalStats">
-        {{ generalStats.animes }}
-        <br />
-        {{ generalStats.comments }}
-        <br />
-        {{ generalStats.lists }}
-        <br />
-        {{ generalStats.users }}
+    <div id="titleDiv">
+        <h1 id="title">Stats of Onlyweebs</h1>
     </div>
-    <div id="animeStats" *ngFor="let anime of animeStats">
-        {{ anime.anime.title }} || {{ anime.numberOfTimesListed }}
+    <div class="boba text-light">
+        <div id="generalStats" class="row">
+            <h2>General Onlyweebs stats</h2>
+            <div id="animes" class="block">
+                <h2>Animes : {{ generalStats.animes }}</h2>
+            </div>
+            <div id="comments" class="block">
+                <h2>Comments : {{ generalStats.comments }}</h2>
+            </div>
+            <div id="lists" class="block">
+                <h2>Lists : {{ generalStats.lists }}</h2>
+            </div>
+            <div id="users" class="block">
+                <h2>Users : {{ generalStats.users }}</h2>
+            </div>
+        </div>
+        <div id="otherStats">
+            <h2>Most popular animes on the website</h2>
+            <p>
+                This is the list of all animes that are present in our users'
+                lists. They are ordered by most present in the lists.
+            </p>
+            <div class="center" id="animeStats">
+                <table
+                    class="
+                        table
+                        table-responsive
+                        table-striped
+                        table-dark
+                        table-hover
+                    "
+                >
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th class="w25" scope="col">Image</th>
+                            <th class="w25" scope="col">Title</th>
+                            <th class="w25" scope="col">Popularity</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr
+                            id="rowInTable"
+                            *ngFor="let anime of animeStats; index as i"
+                            routerLink="/animes/{{ anime.anime.id }}"
+                        >
+                            <th scope="row">{{ i + 1 }}</th>
+                            <td>
+                                <img
+                                    class="img-fluid"
+                                    loading="lazy"
+                                    [src]="anime.anime.imgUrl"
+                                    style="width: 70px"
+                                />
+                            </td>
+                            <td>{{ anime.anime.title }}</td>
+                            <td>{{ anime.numberOfTimesListed | number }}</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+        <div id="commentStats">
+            <div class="stack">
+                <h2>How many times did our users comment ?</h2>
+                <p>On average, our users commented :</p>
+                <h3>{{ commentStats }} times.</h3>
+            </div>
+            <div class="stack">
+                <h2>Place holder Place holder Place holder ?</h2>
+                <p>Place holder Place holder Place holder :</p>
+                <h3>Place holder times.</h3>
+            </div>
+            <div class="stack">
+                <h2>Place holder Place holder Place holder ?</h2>
+                <p>Place holder Place holder Place holder :</p>
+                <h3>Place holder times.</h3>
+            </div>
+            <div class="stack">
+                <h2>Place holder Place holder Place holder ?</h2>
+                <p>Place holder Place holder Place holder :</p>
+                <h3>Place holder times.</h3>
+            </div>
+        </div>
     </div>
 </body>
